--- a/PetPicPicker161102/app/src/main/res/values/strings.xml
+++ b/PetPicPicker161102/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">PetPicPicker</string>
-    <string name="activityMain">연습 문제 7-4</string>
+    <string name="activityMain">연습 문제 7–4</string>
     <string name="strDog">강아지</string>
     <string name="strCat">고양이</string>
     <string name="strRabbit">토끼</string>
