--- a/Activities161123/app/src/main/res/values/strings.xml
+++ b/Activities161123/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">Activities</string>
     <string name="activityMain">메인 엑티비티</string>
     <string name="activitySecond">두 번째 엑티비티</string>
+    <string name="activityThird">세 번째 엑티비티</string>
     <string name="strNewAct">새 화면 열기</string>
     <string name="strReturn">돌아가기</string>
+    <string name="errNoSelect">엑티비티를 선택하세요.</string>
 </resources>
